# tackc

./: .gitattributes  .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  README.md  clippy.toml  test.tck  test2.tck  test3.tck
.cargo/: config.toml  mutants.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: comphash.yml  fuzz.yml  rust.yml
crates/tackc/: Cargo.toml
crates/tackc_analyze/: Cargo.toml
crates/tackc_analyze/src/: lib.rs  resolution.rs
crates/tackc_ast/: Cargo.toml
crates/tackc_ast/src/: block.rs  error.rs  expr.rs  item.rs  lib.rs  prim.rs  prog.rs  stmt.rs  util.rs
crates/tackc_blob/: Cargo.toml  build.rs
crates/tackc_blob/src/: lib.rs
crates/tackc_error/: Cargo.toml
crates/tackc_error/src/: diag.rs  iter.rs  lib.rs
crates/tackc_file/: Cargo.toml
crates/tackc_file/src/: lib.rs
crates/tackc_global/: Cargo.toml
crates/tackc_global/src/: lib.rs
crates/tackc_hash/: Cargo.toml
crates/tackc_lexer/: Cargo.toml
crates/tackc_lexer/src/: lib.rs
crates/tackc_lexer/src/lexer/: keywords-identifiers.tck  operators.tck
crates/tackc_lexer/src/snapshots/: tackc_lexer__run_lexer_test@keywords-identifiers.tck.snap  tackc_lexer__run_lexer_test@non-ascii.tck.snap  tackc_lexer__run_lexer_test@numbers.tck.snap  tackc_lexer__run_lexer_test@operators.tck.snap  tackc_lexer__run_lexer_test@trailing-dot-floats.tck.snap  tackc_lexer__run_lexer_test@underscore-numbers.tck.snap
crates/tackc_lib/: Cargo.toml
crates/tackc_lib/src/: file.rs  global.rs  hash.rs  lexer.rs  lib.rs  parser.rs  span.rs
crates/tackc_lib/src/ast/: block.rs  expr.rs  item.rs  mod.rs  module.rs  prog.rs  stmt.rs
crates/tackc_lib/src/error/: diag.rs  iter.rs  mod.rs
crates/tackc_lib/src/global/: mod.rs
crates/tackc_lib/src/lexer/: mod.rs
crates/tackc_lib/src/lexer/snapshots/: tackc_lexer__run_lexer_test@non-ascii.tck.snap  tackc_lexer__run_lexer_test@numbers.tck.snap  tackc_lexer__run_lexer_test@operators.tck.snap  tackc_lexer__run_lexer_test@underscore-numbers.tck.snap  tackc_lib__lexer__run_lexer_test@keywords-identifiers.tck.snap  tackc_lib__lexer__run_lexer_test@non-ascii.tck.snap  tackc_lib__lexer__run_lexer_test@numbers.tck.snap  tackc_lib__lexer__run_lexer_test@operators.tck.snap  tackc_lib__lexer__run_lexer_test@trailing-dot-floats.tck.snap  tackc_lib__lexer__run_lexer_test@underscore-numbers.tck.snap
crates/tackc_lib/src/parser/: error.rs  mod.rs
crates/tackc_lib/src/parser/snapshots/: tackc_lib__parser__run_prog_parser_test@basic.tck.snap  tackc_lib__parser__run_prog_parser_test@oop.tck.snap  tackc_parser__run_prog_parser_test@basic.tck.snap  tackc_parser__run_prog_parser_test@oop.tck.snap
crates/tackc_lib/src/sema/: global_resolution.rs  mod.rs  module_resolution.rs  name_resolution.rs
crates/tackc_lib/src/snapshots/: tackc_lib__lexer__run_lexer_test@keywords-identifiers.tck.snap  tackc_lib__lexer__run_lexer_test@non-ascii.tck.snap  tackc_lib__lexer__run_lexer_test@numbers.tck.snap  tackc_lib__lexer__run_lexer_test@operators.tck.snap  tackc_lib__lexer__run_lexer_test@trailing-dot-floats.tck.snap  tackc_lib__lexer__run_lexer_test@underscore-numbers.tck.snap  tackc_lib__parser__run_prog_parser_test@basic.tck.snap  tackc_lib__parser__run_prog_parser_test@oop.tck.snap
crates/tackc_lib/src/span/: mod.rs
crates/tackc_lib/src/utils/: hash.rs  iter.rs  mod.rs  tree.rs
crates/tackc_macros/: Cargo.toml
crates/tackc_macros_impl/: Cargo.toml
crates/tackc_meta/: Cargo.toml
crates/tackc_parser/: Cargo.toml  formal.ebnf
crates/tackc_parser/benches/: main_bench.tck  parse_bench.rs
crates/tackc_parser/src/: ast.rs  error.rs  lib.rs
crates/tackc_parser/src/ast/: block.rs  decl.rs  expr.rs  item.rs  prim.rs  prog.rs  stmt.rs  util.rs
crates/tackc_parser/src/ast/expr/: eof-error.tck
crates/tackc_parser/src/ast/expr-parse/: comparison.tck  recursion.tck  trailing-comma-call.tck  types.tck
crates/tackc_parser/src/ast/prog-parse/: exporting.tck
crates/tackc_parser/src/ast/snapshots/: tackc_parser__ast__expr__run_expr_test@comparison.tck.snap  tackc_parser__ast__expr__run_expr_test@eof-error.tck.snap  tackc_parser__ast__expr__run_expr_test@operators.tck.snap  tackc_parser__ast__expr__run_expr_test@recursion.tck.snap  tackc_parser__ast__expr__run_expr_test@trailing-comma-call.tck.snap  tackc_parser__ast__expr__run_expr_test@types.tck.snap  tackc_parser__ast__prog__run_prog_test.snap  tackc_parser__ast__prog__run_prog_test@basic.tck.snap  tackc_parser__ast__prog__run_prog_test@exporting.tck.snap  tackc_parser__ast__stmt__run_stmt_test.snap  tackc_parser__ast__stmt__run_stmt_test@expr.tck.snap  tackc_parser__ast__stmt__run_stmt_test@let.tck.snap  tackc_parser__ast__stmt__run_stmt_test@multi-line.tck.snap.new
crates/tackc_parser/src/ast/stmt-parse/: expr-stmt.tck  let.tck
crates/tackc_parser/src/snapshots/: tackc_parser__run_prog_parser_test.snap  tackc_parser__run_prog_parser_test.snap.new  tackc_parser__run_prog_parser_test@basic.tck.snap  tackc_parser__run_prog_parser_test@basic.tck.snap.new  tackc_parser__run_prog_parser_test@oop.tck.snap  tackc_parser__run_prog_parser_test@oop.tck.snap.new
crates/tackc_parser/src/tests/: basic.tck  oop.tck
crates/tackc_sema/: Cargo.toml
crates/tackc_testing/: Cargo.toml
crates/tackc_testing/data/expr/: eof-error.toml  operators.toml  recursion.toml
crates/tackc_testing/data/expr/src/: operators.tck
crates/tackc_testing/data/lexer/: keywords-identifiers.toml  non-ascii.toml  numbers.toml  trailing-dot-floats.toml  underscore-numbers.toml
crates/tackc_testing/data/lexer/src/: keywords-identifiers.tck  numbers.tck  trailing-dot-floats.tck  underscore-numbers.tck
crates/tackc_testing/src/: expr.rs  lexer.rs  lib.rs
docs/: architecture.md
docs/parser/: grammar.ebnf
fuzz/: Cargo.toml
fuzz/fuzz_targets/: full.rs
fuzz/honggfuzz/: Cargo.toml
fuzz/honggfuzz/src/: main.rs
fuzz/libFuzzer/: Cargo.toml
fuzz/libFuzzer/fuzz_targets/: full.rs
fuzz/shared/: Cargo.toml
fuzz/shared/src/: lib.rs
tackc/: Cargo.toml
tackc_lib/: Cargo.toml  build.rs
tackc_meta/: Cargo.toml
(+94 files in other folders)
