[workspace]
members = ["tackc", "tackc_lib", "tackc_meta", "fuzz/*"]
resolver = "3"

[workspace.dependencies]
serde = "1.0"
thiserror = "2.0"
dashmap = "6.1"
clap = "4.6"
walkdir = "2.5"
tackc_lib = { version = "0.1.0", path = "tackc_lib" }
tackc_fuzz = { version = "0.0.0", path = "fuzz/shared" }
bumpalo = "3.20"
libfuzzer-sys = "0.4.12"
rustc-hash = "2.1"
sha2 = "0.11.0"
honggfuzz = "0.5.60"
insta = "1.47"
proptest = "1.11"
thin-vec = "0.2.18"
ignore = "0.4.25"
nonzero = "0.2.0"
aho-corasick = "1.1"
colored = "3.1"
mutants = "0.0.4"
parking_lot = "0.12.5"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = 0 }
nursery = { level = "warn", priority = 0 }

# Lints to error against to force fixes without allowing #[expect]
missing_assert_message = { level = "forbid", priority = 1 }
multiple_unsafe_ops_per_block = { level = "forbid", priority = 1 }
allow_attributes = { level = "forbid", priority = 1 }
doc_include_without_cfg = { level = "forbid", priority = 1 }
precedence_bits = { level = "forbid", priority = 1 }
same_name_method = { level = "forbid", priority = 1 }
semicolon_inside_block = { level = "forbid", priority = 1 }
try_err = { level = "forbid", priority = 1 }
undocumented_unsafe_blocks = { level = "forbid", priority = 1 }
unused_result_ok = { level = "forbid", priority = 1 }

# Lints to error against in order to force fixes while still allowing #[expect].
doc_paragraphs_missing_punctuation = { level = "deny", priority = 1 }
indexing_slicing = { level = "deny", priority = 1 }
disallowed_types = { level = "deny", priority = 1 }

# Lints to warn against in order to require CHECKED.
mem_forget = { level = "warn", priority = 1 }

# Lints to warn against to be pedantic
rest_pat_in_fully_bound_structs = { level = "warn", priority = 1 }

# Lints to warn against that aren't meant to be #[expect]ed.
todo = { level = "warn", priority = 1 }
dbg_macro = { level = "warn", priority = 1 }

# Lints to allow.
must-use-candidate = { level = "allow", priority = 1 }

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = { level = "warn", priority = 1 }
unsafe_op_in_unsafe_fn = { level = "forbid", priority = 1 }
