[workspace]
members = ["tackc", "tackc_lib", "tackc_meta", "fuzz/*"]
resolver = "3"

[workspace.dependencies]
serde = "1.0"
thiserror = "2.0"
dashmap = "6.2"
clap = "4.6"
walkdir = "2.5"
tackc_lib = { version = "0.1.0", path = "tackc_lib" }
tackc_fuzz = { version = "0.0.0", path = "fuzz/shared" }
bumpalo = "3.20"
libfuzzer-sys = "0.4.13"
rustc-hash = "2.1"
sha2 = "0.11.0"
honggfuzz = "0.5.61"
insta = "1.48"
proptest = "1.11"
thin-vec = "0.2.18"
ignore = "0.4.27"
nonzero = "0.2.0"
aho-corasick = "1.1"
colored = "3.1"
mutants = "0.0.4"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Lints to error against to force fixes without allowing #[expect]
missing_assert_message = "forbid"
multiple_unsafe_ops_per_block = "forbid"
allow_attributes = "forbid"
doc_include_without_cfg = "forbid"
precedence_bits = "forbid"
same_name_method = "forbid"
semicolon_inside_block = "forbid"
try_err = "forbid"
undocumented_unsafe_blocks = "forbid"
unused_result_ok = "forbid"

# Lints to error against in order to force fixes while still allowing #[expect].
doc_paragraphs_missing_punctuation = "deny"
indexing_slicing = "deny"
disallowed_types = "deny"

# Lints to warn against in order to require CHECKED.
mem_forget = "warn"

# Lints to warn against to be pedantic
rest_pat_in_fully_bound_structs = "warn"

# Lints to warn against that aren't meant to be #[expect]ed.
todo = "warn"
dbg_macro = "warn"

# Lints to allow.
must-use-candidate = "allow"
should-panic-without-expect = "allow"
type-complexity = "allow"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
unsafe_op_in_unsafe_fn = "forbid"
