[package]
name = "tackc"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true, features = ["derive"] }
rustc-hash = { workspace = true }
#tackc_analyze = { workspace = true }
tackc_error = { workspace = true }
tackc_file = { workspace = true }
tackc_global = { workspace = true }
tackc_lexer = { workspace = true }
tackc_parser = { workspace = true }
#tackc_parser = { workspace = true }
