[package]
name = "tackc_analyze"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"] }
tackc_global = { workspace = true }
tackc_parser = { workspace = true }
tackc_ast = { workspace = true }
tackc_span = { workspace = true }
tackc_utils = { workspace = true }
tackc_error = { workspace = true }
tackc_file = { workspace = true }
parking_lot = { workspace = true }

[lints]
workspace = true
