[package]
name = "tackc_ast"
version = "0.1.0"
edition = "2024"

[dependencies]
ecow = { version = "0.2.6", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
tackc_file.workspace = true
tackc_global.workspace = true
tackc_lexer.workspace = true
tackc_span.workspace = true

[lints]
workspace = true
