[package]
name = "tackc_file"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"], optional = true }
tackc_macros = { workspace = true }
tackc_span = { workspace = true }

[lints]
workspace = true

[features]
serde = ["dep:serde", "tackc_span/serde"]
