[package]
name = "tackc_global"
version = "0.1.0"
edition = "2024"

[dependencies]
bumpalo = { workspace = true, features = ["std"] }
dashmap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tackc_hash = { workspace = true }
tackc_utils = { workspace = true }

[lints]
workspace = true

[features]
