[package]
name = "tackc_lexer"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"], optional = true }
tackc_file = { workspace = true }
tackc_global = { workspace = true, features = ["serde"] }
tackc_span = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true

[features]
serde = ["dep:serde", "tackc_span/serde", "tackc_file/serde"]
