[package]
name = "tackc_lexer"
version = "0.1.0"
edition = "2024"

[dependencies]
proptest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tackc_file = { workspace = true }
tackc_global = { workspace = true }
tackc_span = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true

[features]

[dev-dependencies]
insta = { workspace = true, features = ["glob", "ron", "serde"] }
