[package]
name = "tackc_parser"
version = "0.1.0"
edition = "2024"

[dependencies]
bumpalo = { workspace = true, features = ["std"] }
serde = { workspace = true, features = ["derive"] }
tackc_file = { workspace = true }
tackc_global = { workspace = true }
tackc_lexer = { workspace = true }
tackc_ast = { workspace = true }
tackc_span = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
criterion = "0.8.1"
insta = { workspace = true, features = ["ron", "glob"] }
ron = "0.12.0"
tackc_error = { workspace = true }

[[bench]]
name = "parse_bench"
harness = false
