[package]
name = "tackc_parser"
version = "0.1.0"
edition = "2024"

[dependencies]
bumpalo = { workspace = true, features = ["std"] }
serde = { workspace = true, features = ["derive"] }
tackc_file = { workspace = true }
tackc_global = { workspace = true }
tackc_lexer = { workspace = true }
tackc_ast = { workspace = true }
tackc_span = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
criterion = { workspace = true }
insta = { workspace = true, features = ["ron", "glob"] }
ron = { workspace = true }
tackc_error = { workspace = true }

[[bench]]
name = "parse_bench"
harness = false
