[package]
name = "tackc_parser"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"] }
tackc_error = { workspace = true }
tackc_file = { workspace = true }
tackc_global = { workspace = true }
tackc_lexer = { workspace = true }
tackc_span = { workspace = true }
tackc_utils = { workspace = true }
thin-vec = { workspace = true, features = ["serde"] }

[lints]
workspace = true

[dev-dependencies]
insta = { workspace = true, features = ["ron", "serde"] }
