[package]
name = "tackc_testing"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap = { version = "4.5.51", features = ["derive"] }
colored = "3.0.0"
flate2 = "1.1.5"
sbof = "1.1.1"
serde = { workspace = true, features = ["derive"] }
tackc_file = { version = "0.1.0", path = "../tackc_file", features = ["serde"] }
tackc_lexer = { version = "0.1.0", path = "../tackc_lexer", features = ["serde"] }
toml.workspace = true
walkdir = "2.5.0"

# Workspace lints are a pain, don't use them for binaries.
#[lints]
#workspace = true
