[package]
name = "tackc_testing"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
colored = { workspace = true }
flate2 = { workspace = true }
sbof = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tackc_file = { workspace = true, features = ["serde"] }
tackc_global = { workspace = true }
tackc_lexer = { workspace = true, features = ["serde"] }
tackc_span = { workspace = true, features = ["serde"] }
toml = { workspace = true }
walkdir = { workspace = true }

# Workspace lints are a pain, don't use them for binaries.
#[lints]
#workspace = true
