[package]
name = "tackc_libfuzzer"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { workspace = true }
tackc_fuzz = { version = "0.0.0", path = "../shared" }

[[bin]]
name = "full"
path = "fuzz_targets/full.rs"
test = false
doc = false
bench = false
